@@ -1,3 +1,9 @@
+2014-10-18  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>
+	     Georg-Johann Lay <avr@gjlay.de>
+
+	* include/avr/wdt.h: Generalize implementation of wdt_enable and
+	wdt_disable based on arch and addressability of _WD_CONTROL_REG.
+
 2014-10-15  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>
 	* include/util/delay.h.in: Replace inline with __inline__ and
 	always_inline with __always_inline__.
